--- a/css/style.css
+++ b/css/style.css
@@ -67,24 +67,25 @@ img {
   height: 90vh;
   margin-top: -1px;
   /* background-color: #777; */
-  background: url(../assets/bg_dobra2.jpg)  no-repeat center; 
+  background: url(../assets/bg_dobra2-2.jpg)  no-repeat center; 
 }
 
 .dobra-2-content {
-  width: 1280px;
-  margin: 0 auto;
-  padding-right: 25%;
+  margin: 0 10%; 
+  width: 45%;
   display: flex;
   flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
   flex-wrap: wrap;
 }
 
 .dobra-2-content p {
-  margin-top: 3rem;
+  margin-top: 6rem;
   color:#c55c23;
   text-transform: uppercase;
   margin-bottom: 1rem;
- 
+  
   font-size: 1rem;
   font-style: normal;
   font-weight: 600;
@@ -96,7 +97,6 @@ img {
 .dobra-2-content h1 {
   color: #fff;
   text-transform: uppercase;
-  padding-right: 30px;
   font-size: 2.75rem;
   line-height: 48px;
   letter-spacing: 0;
@@ -106,7 +106,6 @@ img {
   margin-top: 2rem;
   color: #fff;
   text-transform: uppercase;
-  padding-right: 60px;
 
   font-size: 1rem;
   font-style: normal;
@@ -118,7 +117,7 @@ img {
 }
 
 .dobra-2-content button {
-  margin-top: 40px;
+  margin-top: 30px;
   background: #c55c23;
   color: #fff;
   transition: transform .2s ease-in;
@@ -131,29 +130,19 @@ img {
   text-transform: uppercase;
 }
 
+.seta img {
+  display: border-box;
+  -webkit-animation: arrow-down 1.5s infinite alternate;
+  animation: arrow-down 1.5s infinite alternate;
+}
+
 .seta {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   cursor: pointer;
-  margin-top: 10vh;
-}
-
-.seta h1 {
-  margin-top: 1rem;
-  color: #fff;
-  text-transform: uppercase;
-  padding-right: 30px;
-  font-size: 38px;
-  line-height: 48px;
-  letter-spacing: 0;
-}
-
-.seta img {
-  display: border-box;
-  -webkit-animation: arrow-down 1.5s infinite alternate;
-  animation: arrow-down 1.5s infinite alternate;
+  margin-top: 3vh;
 }
 
 @keyframes arrow-down {
@@ -167,26 +156,42 @@ img {
   }
 }
 
+@media screen and (max-width:1366px) {
+  .dobra-2-content {
+    margin: 0 10%; 
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-wrap: wrap;
+  }
+}
+
 @media screen and (max-width:768px) {
   .dobra-2 {
     height: 90vh;
-    margin-top: -2px;
+    margin-top: -45px;
     background: url(../assets/bg_dobra2_tablet.jpg)  no-repeat center center; 
     padding: 0 40px;
   }
 
   .dobra-2-content {
-    max-width: 768px;
-    
+    margin: 0 10%; 
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
   }
 
   .dobra-2-content p {
-    margin-top: 16rem;
+    margin-top: 17rem;
   }
 
   .dobra-2-content h1 {
     padding-right: 0px;
-    font-size: 2rem;
+    font-size: 1.75rem;
+    line-height: 36px;
   }
 
   .dobra-2-content h4 {
@@ -195,7 +200,7 @@ img {
   }
 
   .dobra-2-content button {
-    margin-top: 20px;
+    margin-top: 1rem;
     max-width: 300px;
     font-size: 0.8rem;
   }
@@ -203,7 +208,10 @@ img {
   .botao {
     max-width: 300px;
     padding: 15px 40px;
-    
+  }
+
+  .dobra-2-content .dobra-2-p {
+    margin-top: 0.9rem;
   }
 
   .seta img {
@@ -213,20 +221,23 @@ img {
 
 @media screen and (max-width:425px) {
   .dobra-2 {
-    height: 90vh;
-    margin-top: -3px;
-    max-width: 425px;
+    height: auto;
+    margin-top: -43px;
     padding: 0 20px;
-    background: url(../assets/bg_dobra2_tablet.jpg)  no-repeat center center; 
+    background: url(../assets/bg_dobra2_tablet.jpg)  no-repeat  top; 
     flex-wrap: wrap;
   }
 
   .dobra-2-content {
-    max-width: 425px;
+    margin: 0; 
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
   }
 
   .dobra-2-content p {
-    margin-top: 18rem;
+    margin-top: 17rem;
     font-size: 0.7rem;
   }
 
@@ -237,9 +248,7 @@ img {
   }
 
   .dobra-2-content h4 {
-    margin-top: 1rem;
-    padding-right: 20%;
-    font-size: 0.7rem;
+    display: none;
   }
 
   .dobra-2-content button {
@@ -255,6 +264,22 @@ img {
     padding: 15px 15px;
     font-size: 1rem;
   }
+
+  .seta img {
+    display: border-box;
+    -webkit-animation: arrow-down 1.5s infinite alternate;
+    animation: arrow-down 1.5s infinite alternate;
+  }
+  
+  .seta {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    cursor: pointer;
+    margin-top: 0;
+  }
+  
 }
 
 /* Dobra 3 */
@@ -275,7 +300,6 @@ img {
   margin-bottom: 1rem;
   color: #fff;
   text-transform: uppercase;
-  padding-right: 30px;
   font-size: 38px;
   line-height: 48px;
   letter-spacing: 0;
@@ -284,10 +308,10 @@ img {
 
 .dobra-3-conteudo {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: flex-start;
-  width: 1280px;
-  
+  width: 60%;
+  margin-top: 40px;
 }
 
 .dobra-3-categorias {
@@ -326,7 +350,7 @@ img {
   color: #fff;
 }
 
-.dobra-3-descricao .teste{
+.dobra-3-descricao .conteudo{
   max-width: 720px;
 }
 
@@ -344,18 +368,25 @@ img {
 }
 
 @media screen and (max-width:768px) {
+  .dobra-3 {
+    padding: 40px;
+  }
+
   .dobra-3-h1 {
     font-size: 2rem;
     line-height: 24px;
+    
   }
 
   .dobra-3-conteudo {
-    max-width: 768px;
-    padding: 0 40px;
+    width: 100%;
   }
   
   .dobra-3-categorias {
-    padding-right: 40px;
+    padding-right: 20px;
+  }
+  .dobra-3-descricao ul li {
+    margin-left: 20px;
   }
 }
 
@@ -367,17 +398,16 @@ img {
   }
 
   .dobra-3-conteudo {
-    max-width: 425px;
-    padding: 0 20px;
+    max-width: 100%;
+    padding: 0 ;
     display: flex;
     flex-direction: column;
   }
   
   .dobra-3-categorias {
-    padding-right: 20px;
     display: flex;
     flex-direction: row;
-    padding: 0 20px;
+    padding: 0;
   }
 
   .dobra-3-categorias ul li {
@@ -386,7 +416,7 @@ img {
   }
 
   .dobra-3-descricao {
-    padding: 0 20px;
+    padding: 0 ;
   }
 
   .dobra-3-descricao ul li {
@@ -496,24 +526,6 @@ footer p {
 }
 
 .js-content2 section.ativado {
-  display: block !important;
-  animation: show 0.5s forwards;
-}
-
-.js-content3 .teste3 {
-  display: none;
-}
-
-.js-content3 section.ativado2 {
-  display: block !important;
-  animation: show 0.5s forwards;
-}
-
-.js-content4 .teste4 {
-  display: none;
-}
-
-.js-content4 section.ativado3 {
   display: block !important;
   animation: show 0.5s forwards;
 }
