--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,10 @@ a {
   padding: 0px;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: 'Montserrat', sans-serif;
   /* color: #222222; */
@@ -67,7 +71,7 @@ img {
   height: 90vh;
   margin-top: -13px;
   /* background-color: #777; */
-  background: url(../assets/bg_dobra2-2.jpg)  no-repeat center; 
+  background: url(../assets/bg_dobra2-2.jpg)  no-repeat center center; 
 
 }
 
@@ -82,7 +86,7 @@ img {
 }
 
 .dobra-2-content p {
-  margin-top: 8rem;
+  margin-top: 10rem;
   color:#c55c23;
   text-transform: uppercase;
   margin-bottom: 1rem;
@@ -98,7 +102,7 @@ img {
 .dobra-2-content h1 {
   color: #fff;
   text-transform: uppercase;
-  font-size: 2.75rem;
+  font-size: 3rem;
   line-height: 48px;
   letter-spacing: 0;
 }
@@ -118,7 +122,7 @@ img {
 }
 
 .dobra-2-content button {
-  margin-top: 30px;
+  margin-top: 2rem;
   background: linear-gradient(268deg, #e28d5f, #c55c23, #e28d5f,#c55c23);
   background-size: 800% 800%;
   color: #fff;
@@ -159,7 +163,7 @@ img {
   justify-content: center;
   flex-direction: column;
   cursor: pointer;
-  margin-top: 10%;
+  margin-top: 8%;
 }
 
 @keyframes arrow-down {
@@ -207,7 +211,7 @@ img {
   }
 
   .seta {
-    margin-top: 2%;
+    margin-top: 6%;
   }
 }
 
@@ -242,7 +246,7 @@ img {
   }
 
   .dobra-2-content p {
-    margin-top: 14rem;
+    margin-top: 15rem;
     font-size: 0.8rem;
   }
 
@@ -600,5 +604,76 @@ footer p {
   to {
     opacity: 1;
     transform: translate3d(0, 0, 0);
+  }
+}
+
+/* Menu mobile */
+
+[data-menu="button"] {
+  display: none;
+}
+
+@media (max-width: 768px) {
+  .js [data-menu="button"] {
+    display: flex;
+    background: #c55c23;
+    border: none;
+    padding: .5rem 1rem;
+    border-radius: 4px;
+    text-transform: uppercase;
+    font-family: 'IBM Plex Mono', monospace;
+    font-weight: bold;
+    color: #fff;
+    cursor: pointer;
+    margin: 10px;
+    align-items: center;
+    position: relative;
+    z-index: 300;
+  }
+  
+  .js [data-menu="button"]::before {
+    margin-right: 4px;
+    content: '';
+    display: inline-block;
+    height: 2px;
+    width: 12px;
+    background: #fff;
+    box-shadow: 0 4px #fff, 0 -4px #fff;
+    transition: transform .3s;
+  }
+
+  .js [data-menu="button"].active::before {
+    transform: rotate(90deg);
+  }
+
+  .js [data-menu="list"] {
+    display: none;
+    position: absolute;
+    background: #202227;
+    width: 220px;
+    z-index: 200;
+    top: 0;
+    right: 0;
+    padding: 80px 0px 20px 0;
+    box-shadow: 2px 2px 2px 0 rgba(213, 214, 234,.2);
+  }
+
+  #menu li {
+    padding: 15px;
+  } 
+
+  .js [data-menu="list"].active {
+    display: block;
+    animation: show-right .3s forwards;
+  }
+  .js .dropdown-menu {
+    position: static;
+    border: none;
+  }
+}
+
+@media (max-width: 500px) {
+  .js [data-menu="list"] {
+    width: 180px;
   }
 }
