--- a/css/style.css
+++ b/css/style.css
@@ -354,7 +354,7 @@ img {
 }
 
 .dobra-3-h1 {
-  display: flex;
+  display: inline-block;
   align-items: center;
   margin-bottom: 1rem;
   color: #fff;
@@ -439,7 +439,7 @@ img {
 
   .dobra-3-h1 {
     font-size: 2rem;
-    line-height: 24px;
+    line-height: 36px;
     
   }
 
@@ -458,7 +458,7 @@ img {
 
 @media screen and (max-width:425px) {
   .dobra-3-h1 {
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     padding: 0 20px;
   }
 
