--- a/css/style.css
+++ b/css/style.css
@@ -162,7 +162,7 @@ img {
 }
 
 .seta img {
-  display: border-box;
+  box-sizing: border-box;
   -webkit-animation: arrow-down 1.5s infinite alternate;
   animation: arrow-down 1.5s infinite alternate;
 }
@@ -536,25 +536,32 @@ img {
 /* Dobra 5 */
 
 .dobra-5 {
-  background-color: rgb(224, 243, 243);
+  background-color: #000;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
   flex-direction: column;
   padding: 3rem 3rem;
 }
 
+.dobra-5-img {
+  width: 300px;
+}
+
 .dobra-5-container {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   width: 100%;
+  margin-bottom: 4rem;
 }
 
 .dobra-5-content {
   display: flex;
   flex-direction: column;
-  max-width: 720px;
+  max-width: 40%;
+  padding: 0 0 0 2rem;
+  color: #fff;
 }
 
 .dobra-5-content h2 {
@@ -562,8 +569,31 @@ img {
   padding: 0 0 40px 0;
 }
 
-.dobra-5 button  {
-  margin-top: 80px;
+.dobra-5 .botao  {
+  margin-top: 2rem;
+}
+
+@media screen and (max-width:768px)  {
+  .dobra-5-container {
+    flex-direction: column;
+  }
+  .dobra-5-content {
+    max-width: 80%;
+    margin-top: 2rem;
+  }
+  .dobra-5-content h2 {
+    font-size: 2rem;
+  }
+}
+
+@media screen and (max-width:450px) {
+  .dobra-5-content {
+    max-width: 90%;
+    margin-top: 1rem;
+  }
+  .dobra-5-content h2 {
+    font-size: 1.5rem;
+  }
 }
 
 /* Footer */
