--- a/css/style.css
+++ b/css/style.css
@@ -587,8 +587,11 @@ img {
 }
 
 @media screen and (max-width:450px) {
+  .dobra-5 {
+    padding: 3rem 1rem;
+  }
   .dobra-5-content {
-    max-width: 90%;
+    max-width: 100%;
     margin-top: 1rem;
   }
   .dobra-5-content h2 {
